# GarfieldCode

./: .gitignore  README.md
ATPC/: ATPC.C  CMakeLists.txt  HexMat.txt  IonMobility_Xe+_Xe.txt
ATPC/job/: ATPC_job.sh  run_simulations.sh
Electroluminescence/: .gitattributes  Argon_4bar.gas  CMakeLists.txt  CRAB.C  CalcTrackRes.py  Data.csv  Merge_Yeilds.py  Mesh.C  PlotEField.C  TrackSim.C  Xenon.gas  compile.sh  example.C  run.sh  userHandle.C  xe.gas  xe_properties.gas
Electroluminescence/Files/: AlignedMesh_MaterialProperties.txt  Mesh_MaterialProperties.txt
Electroluminescence/Files/Aligned/: Aligned_Mesh.mphtxt  Aligned_Mesh_Data
Electroluminescence/Files/Rotated/: Rotated10_Mesh.mphtxt  Rotated10_Mesh_Data  Rotated20_Mesh.mphtxt  Rotated20_Mesh_Data  Rotated40_Mesh.mphtxt  Rotated40_Mesh_Data
Electroluminescence/Maps/: dist_unitcell_Aligned.h5  unitcell_Aligned.h5  unitcell_Rot30.h5  unitcell_Shifted.h5
Electroluminescence/config/: NEW.eminus.config.mac  NEW.eminus.init.mac  NEW.eminus_40keV.config.mac  NEW.eminus_40keV.init.mac  NEXT100.eminus.config.mac  NEXT100.eminus.init.mac
Electroluminescence/job/: Aligned_Mesh_job.sh  CRAB_Mesh_job.sh  CalcTrackResKr_job.sh  CalcTrackRes_job.sh  Disk_Mesh_job.sh  Mesh_job.sh  Rot10_Mesh_job.sh  Rot30_Mesh_job.sh  Rot40_Mesh_job.sh  Rotated_Mesh_job.sh  Shifted_Mesh_job.sh  launch_TrackRes_jobs.sh  launch_jobs.sh
Electroluminescence/notebooks/: CalcDiffusion.ipynb  CalcTrackRes.ipynb  PlotElectricField.ipynb  PlotResCombined.ipynb  SaveTimeProfile.ipynb  StudyConfigs.ipynb  StudyTrajectories.ipynb
(+4 files in other folders)
